--- a/project/templates/registration/login.html
+++ b/project/templates/registration/login.html
@@ -11,7 +11,7 @@
     <form action="" method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <p>poiuyfdfghjkhgffghj</p>
+        <p>Original</p>
         <p><input type="submit" value="login"></p>
     </form>
 
